--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "buenaventura-fe",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "private": true,
   "description": "buenaventura-fe",
   "author": "Novanet Studio",
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "gatsby": "^5.14.1",
+    "gatsby-plugin-manifest": "^5.14.0",
     "gatsby-plugin-sass": "^6.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
